--- a/app/src/main/res/layout/activity_lab3.xml
+++ b/app/src/main/res/layout/activity_lab3.xml
@@ -55,6 +55,7 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="60dp"
         android:layout_alignRight="@+id/spinner"
-        android:layout_alignEnd="@+id/spinner"/>
+        android:layout_alignEnd="@+id/spinner"
+        android:onClick="buttonConfirm"/>
 
 </RelativeLayout>
