--- a/app/src/main/res/layout/activity_lab3.xml
+++ b/app/src/main/res/layout/activity_lab3.xml
@@ -13,49 +13,113 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Round 1"
-        android:id="@+id/labelGame"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:text="Player One:"
+        android:id="@+id/labelPlayerOne"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textAlignment="center"
-        android:textSize="@android:dimen/app_icon_size"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Please Choose:"
-        android:id="@+id/labelChoose"
+        android:text="Player Two"
+        android:id="@+id/labelPlayerTwo"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/inputPOne"
+        android:layout_below="@+id/labelPlayerOne"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/labelGame"
+        android:minWidth="100dp"/>
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/inputPTwo"
+        android:layout_alignTop="@+id/inputPOne"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:minWidth="100dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Round 1"
+        android:id="@+id/labelRound"
+        android:layout_below="@+id/inputPOne"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/inputPTwo"
+        android:layout_alignEnd="@+id/inputPTwo"
+        android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Player One:"
+        android:id="@+id/labelPlayerOneMove"
+        android:layout_below="@+id/labelRound"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/labelRound"
+        android:layout_alignEnd="@+id/labelRound"/>
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerPone"
+        android:layout_below="@+id/labelPlayerOneMove"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:entries="@array/rps"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Player Two:"
+        android:id="@+id/labelPlayerTwoMove"
+        android:layout_below="@+id/spinnerPone"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_below="@+id/labelChoose"
+        android:id="@+id/spinnerPTwo"
+        android:layout_below="@+id/labelPlayerTwoMove"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/labelChoose"
-        android:layout_alignEnd="@+id/labelChoose"
         android:entries="@array/rps"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Confirm"
-        android:id="@+id/buttonConfirm"
-        android:layout_below="@+id/spinner"
+        android:id="@+id/buttonComfirm"
+        android:layout_below="@+id/spinnerPTwo"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="60dp"
-        android:layout_alignRight="@+id/spinner"
-        android:layout_alignEnd="@+id/spinner"
-        android:onClick="buttonConfirm"/>
+        android:layout_alignRight="@+id/spinnerPTwo"
+        android:layout_alignEnd="@+id/spinnerPTwo"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Result"
+        android:id="@+id/textResult"
+        android:layout_below="@+id/buttonComfirm"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/buttonComfirm"
+        android:layout_alignEnd="@+id/buttonComfirm"/>
 
 </RelativeLayout>
