--- a/app/src/main/res/layout/activity_lab3.xml
+++ b/app/src/main/res/layout/activity_lab3.xml
@@ -35,7 +35,8 @@
         android:layout_below="@+id/labelPlayerOne"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:minWidth="100dp"/>
+        android:minWidth="100dp"
+        android:onClick="onInputChanged"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -44,7 +45,8 @@
         android:layout_alignTop="@+id/inputPOne"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:minWidth="100dp"/>
+        android:minWidth="100dp"
+        android:onClick="onInputChanged"/>
 
     <TextView
         android:layout_width="wrap_content"
